fix the spacing on client lawyer list page

--- a/react-front-end/src/components/Card.scss
+++ b/react-front-end/src/components/Card.scss
@@ -14,6 +14,7 @@
 		background: linen;
 		width: 100px;
 		height: 100px;
+		align-items: center;
 		border-radius: 50%;
 		padding: 5px;
 		transform: translate(95px, 45px);
