--- a/react-front-end/src/components/definedLawFieldBox.scss
+++ b/react-front-end/src/components/definedLawFieldBox.scss
@@ -2,7 +2,8 @@
   // display: flex;
   // margin-top: 15px;
   // margin-left: 350px;
-  width: 800px;
+  width: 75%;
+  margin: auto;
 	height: auto;
 	background: white;
 	border-radius: 10px;
