--- a/react-front-end/src/components/profilePopUp.scss
+++ b/react-front-end/src/components/profilePopUp.scss
@@ -8,7 +8,7 @@
 }
 .profileBox {
 	position: relative;
-	width: 315px;
+	width: 317px;
 	margin: 0 auto;
 	height: auto;
 	max-height: 70vh;
