--- a/react-front-end/src/pages/ClientLawyerListView.scss
+++ b/react-front-end/src/pages/ClientLawyerListView.scss
@@ -7,15 +7,15 @@
 
 .dropdown-options{
   display: flex;
-  position: absolute;
-  width: 70%;
+  // position: absolute;
+  width: 80%;
   justify-content: space-around;
-  margin-top: 15em;
+  margin-top: 2em;
 }
 
 .lawyers-list {
-  margin-top:7em;
-  width: 80%;
+  margin-top:1em;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
